--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,19 +1,25 @@
 \section{Summary and Outlook}
 
-\> conclude the (quite a few) Coulomb-study results
+\> cross-section measurement summary
+\>> first time at LHC: t down to the Coulomb-interference region
+\>>> RPs extremely close to beam (unprecedented)
+\>>> novel collimation procedure
+
+
+\> CNI analysis summary
 \>> generally summarise the feasibility of the task
-\>> summarise the numbers, uncertainties
-
-\> emphasize very first results, original work
-\>> first LHC result of si tot where
+\>> summarise the examples: numbers, uncertainties
+\>>> dependence on assumptions: non-trivial (rho, B), limited (si tot)
+\>>> any conclusion?
+\>> emphasize -- first LHC results where
 \>>> rho determined in the same analysis (not from an external source)
-\>>> explicit separation of Coulomb and nuclear components
+\>>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
 
-\> emphasize novel methods, used for the first times
-\>> RPs extremely close to beam, novel collimation procedure
 
 \> prospects for future
 \>> how could things be done better: requirements from theory/experiment
 \>>> need better distinction between the hadronic and CNI components
 \>>> either from theory: narrow the range of possible parametrisations
 \>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
+\>> TOTEM plans, measurements foreseen
+\>>> extremely high beta* (2500 m), what t reach (also as a function of s)
