--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -337,9 +337,13 @@ In contrast to the previous section, here the $1000$ and $90\un{m}$ data sets ar
 \item Phase at $t = 0$, parameter $p_0$ in Eqs.~(\ref{eq:nuc phase con}) and (\ref{eq:nuc phase per}): as indicated in Figure~\ref{fig:cni effect}, maximum sensitivity to $p_0$ (or $\rho$) lies a $|t|$ region only available in the $1000\un{m}$ data set.
 \item Phase ``shape'' (only for peripheral phase), other parameters in Eq.~(\ref{eq:nuc phase per}): as for modulus shape, the $90\un{m}$ data set provides much stronger constrains.
 \end{itemize}
-Therefore, one may perform a series of two fits, one with $1000$ and the other with $90\un{m}$ data set, each of them fixing the parameters according to the breakdown above. Since there are two choices for the modulus normalisation, $a$, and one can start the fit series with either the $1000$ or the $90\un{m}$ data set, there are four variants of this approach, see Figure~\ref{fig:fits reciprocal der}. The fit series is repeated several times until convergence is reached.
+Therefore, one may perform a sequence of two fits, one with $1000$ and the other with $90\un{m}$ data set, each of them fixing the parameters according to the breakdown above. Since there are two choices for the modulus normalisation, $a$, and one can start the fit sequence with either the $1000$ or the $90\un{m}$ data set, there are four variants of this approach, see Figure~\ref{fig:fits reciprocal der}. The fit sequence is repeated several times until convergence is reached.
 
-Figure~\ref{fig:fits reciprocal der} presents a comparison of the fit results from methods presented in this and the previous sections. For the fits with the peripheral phase parametrisation, all phase parameters have been free (as in the previous section). \TODO{describe observations}
-\> generally, very similar results from all the fit methods (notable exceptions ??)
-\> higher significance from 1000m data - why?
-\> mainly for sigma tot: split to red-magenta and blue-green groups, according to which data set determines the normalisation
+Figure~\ref{fig:fits reciprocal der} presents a comparison of the fit results from methods presented in this section (reciprocal fits) and the previous section (common fits). For the fits with the peripheral phase parametrisation, all phase parameters have been free, consistently with the previous section).
+\TODO{Describe observations.}
+\iffalse
+Generally, one can conclude very good agreement among all the fit methods and variants, which reflects the robustness of the fitting procedures. The small variations, mostly visible in $\sigma_{\rm tot}$ results, follow the choice of the data set determining the normalisation $a$: see the red-magenta and blue-green point groups in the figure.
+\TODO{expectable, si tot especially sensitive to a, but magnitude reasonable?? Both calibrated with the same data set!}
+\TODO{Comment on rho and B for N=3 and peripheral phase -- larger differences.}
+One can also see a trend in the fit qualities (significances): the quality of $1000\un{m}$ data fits (triangles up) tends to be worse than the one of $90\un{m}$ fits (triangles down). This effect has two sources. First, the $90\un{m}$ data fits can freely change ``shape'' of modulus (and phase, if applicable) and consequently the fit can better describe the data. Second source is a small difference between the two data sets. As can be seen from Figure~\ref{} both data sets feature a ``U shape'' however it seems more pronounced for the $1000\un{m}$ data (... details). \TODO{continue}
+\fi
