before leaving for the weekend
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10115 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -23,3 +23,4 @@
 \>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
 \>> TOTEM plans, measurements foreseen
 \>>> extremely high beta* (2500 m), what t reach (also as a function of s)
+\>> other possible experiments: n+n, n+p scattering -- Coulomb reduced, better hint on the nuclear component
