no more TODOs in Coulomb chapter
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10128 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -23,4 +23,6 @@
 \>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
 \>> TOTEM plans, measurements foreseen
 \>>> extremely high beta* (2500 m), what t reach (also as a function of s)
+\>>> wish: more statistics -- better discrimination power (N vs.~CNI component)
+\>>> wish: lower $|t|$ reach -- helps in several issues in one go. If ``pure'' Coulomb measured, normalisation constrained -- uncertainty of si tot reduced. The rising edge of acceptance shifted, thus higher statistics in the CNI region. Similarly, the (leading) impact of the vertical-alignment uncertainty suppressed.
 \>> other possible experiments: n+n, n+p scattering -- Coulomb reduced, better hint on the nuclear component
