--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -246,7 +246,7 @@ Figure \ref{fig:fits common per} shows results of fits with the peripheral nucle
 \begin{center}
 \includegraphics{fig/fits_common_per.pdf}
 \caption{%
-Fit results with peripheral nuclear phase parametrisation, Eq.~(\ref{eq:nuc phase per}). Legend identical to in Figure~\ref{fig:fits common con}. \TODO{repeat the legend if not on the same page}
+Fit results with peripheral nuclear phase parametrisation, Eq.~(\ref{eq:nuc phase per}). Legend identical to Figure~\ref{fig:fits common con}.
 }
 \label{fig:fits common per}
 \end{center}
@@ -306,11 +306,11 @@ Figure~\ref{fig:fits reciprocal der} also compares the newly derived parameters 
 %
 Regarding $\rho$, the figure provides comparison to the preferred-model estimate by COMPETE \cite{compete} which is obtained by extrapolation from lower scattering energies. The new results lie all below the COMPETE value.
 
-Monte-Carlo studies show that uncertainties of $\rho$ in Table~\ref{tab:fits common} have about equal source in statistical and systematic uncertainties of the data. For the slope $B^{\rm N}$, the uncertainty depends strongly of the fit configuration and the statistical and systematic uncertainties contribute at various ratios. The uncertainties of $\sigma_{\rm tot}$ are mostly due to the normalisation uncertainty.
-\TODO{Check: from an old MC with 1000m data only!}
+Monte-Carlo studies show that uncertainties of $\rho$ in Table~\ref{tab:fits common} have about equal source in statistical and systematic uncertainties of the data, the latter being dominated by the vertical-alignment uncertainty in $1000\un{m}$ data (cf.~red curve in Figure~\ref{fig:syst unc}).
+%For the slope $B^{\rm N}$, the uncertainty depends strongly of the fit configuration and the statistical and systematic uncertainties contribute at various ratios.
+The uncertainties of $\sigma_{\rm tot}$ are mostly due to the normalisation uncertainty.
 
-Table \ref{tab:fits common} presents also RMS values of impact parameter, $b$, for elastic and inelastic collisions. These quantities indicate the character of the collisions in the impact parameter space and have been calculated according to Section 3 in~\cite{klk02}, directly from $t$-space quantities. \TODO{equation??}
-One can conclude that irrespectively on $N_b$, the constant-phase fits have central character: elastic collisions occur at smaller impact parameters than the inelastic collisions. In contrary, all the fits with the peripheral nuclear phase lead to opposite (peripheral) hierarchy.
+Table \ref{tab:fits common} presents also RMS values of impact parameter, $b$, for elastic and inelastic collisions. These quantities indicate the character of the collisions in the impact parameter space and have been calculated according to Section 3 in~\cite{klk02}, directly from $t$-space quantities. One can conclude that irrespectively on $N_b$, the constant-phase fits have central character: elastic collisions occur at smaller impact parameters than the inelastic collisions. In contrary, all the fits with the peripheral nuclear phase lead to opposite (peripheral) hierarchy.
 
 The fits have been repeated with electromagnetic form factors by Borkowski et al.~\cite{borkowski} instead the default one (see Section~\ref{sec:cni coulomb}) leading to no change in the results. Similarly, another set of fits has been performed with the high-$|t|$ component of the nuclear modulus (see Section~\ref{sec:cni nuclear}) scaled by a factor of $1.2$ (preliminary uncertainty estimate), again with no impact on the results.
 
