--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -126,8 +126,7 @@ the arctangent of the hadronic phase at $t = 0$,
 %the ratio between the real and the 
 %imaginary parts of the forward hadronic elastic amplitude, 
 was determined for each case. The conditional results for $\rho$ lie in the 
-range ... with a typical uncertainty of ...
-\todo{Give range of values and errors here?}
+range $0.059 - 0.12$ with a typical uncertainty of $\sim0.02$.
 \end{abstract}
 
 % TODO
